updated Spark Jupyter guide